recursion.cons.min.Min.scala.error
Compilation error:
Min:11: error: overloaded method value <= with alternatives:
  (x: Double)Boolean <and>
  (x: Float)Boolean <and>
  (x: Long)Boolean <and>
  (x: Int)Boolean <and>
  (x: Char)Boolean <and>
  (x: Short)Boolean <and>
  (x: Byte)Boolean
 cannot be applied to (List[Int])
 };else if (l.tail.head<=l.tail) {
                       ^